--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2,7 +2,10 @@
   font-family: "Sen";
   src: url("../fonts/sen-variable-font.ttf");
 }
-
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/Inter-VariableFont_opsz,wght.ttf");
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
